# cmake-example

./: CMakeLists.txt  main.cpp
MathFunctions/: CMakeLists.txt
